--- a/TauwApp/public/stylesheets/aside.scss
+++ b/TauwApp/public/stylesheets/aside.scss
@@ -67,6 +67,13 @@ aside {
                 @include breakpoint(mobileonly) {
                   display: none;
                 }
+                @include breakpoint(phablet) {
+                  display: none;
+                }
+                @include breakpoint(tablet) {
+                  display: block;
+                }
+
             }
         }
         h2 {
@@ -123,7 +130,7 @@ aside {
                   width: 50%;
                 }
                 @include breakpoint(phablet) {
-                  width: 50%;
+                  width: 100%;
                 }
                 @include breakpoint(tablet) {
                   width: 100%;
